--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,8 @@
 
   <header id="masthead">
   <div class="container">
-      <a href="index.html" id="logo">Jannah June Nieves</a>
+      <!-- <a href="index.html" id="logo">Jannah June Nieves</a> -->
+      <a href="index2.html" id="logo">Jannah June Nieves</a>
       <nav>
         <!-- <a href="index.html"><button type="button" class="btn btn-default navbar-btn">About</button></a> -->
         <a href="index2.html"><button type="button" class="btn btn-default navbar-btn">About</button></a>
