footer class changed

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
 
 
       <div class="work">
-        <img src="assets/images/RPS.jpg" alt="Rock Paper Scissors" width="200" height="200" class="img-fluid" alt="Responsive image">
-        <h3>Rock Paper Scissors</h3>
+        <img src="assets/images/sushi.jpg" alt="Rock Paper Scissors" width="200" height="200" class="img-fluid" alt="Responsive image">
+        <h3>Sushi</h3>
       </div>
       </div>
 
