--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="row">
             <div class="col-xs-4"></div>
-            <div class="col-xs-4"><img src="assets/images/jj.jpg" class="auth-image" alt="JJN" class="img-fluid" alt="Responsive image"></div>
+            <div class="col-xs-4"><img src="assets/images/jj.jpg" class="auth-image psychic-image" alt="JJN" class="img-fluid" alt="Responsive image"></div>
             </div>
             
             <div class="row">
@@ -67,7 +67,7 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div class="footer">
       Copyright &copy; 
     </div>
   </footer>
