--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Jannah June Nieves</title>
+  <title>Contact | Jannah Nieves</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jannah June Nieves</a>
+      <a href="index.html" id="logo">Jannah Nieves</a>
       <!-- <a href="index2.html" id="logo">Jannah June Nieves</a> -->
       <nav>
           <!-- <a href="index2.html"><button type="button" class="btn btn-default navbar-btn">About</button></a> -->
