--- a/portfolio.html
+++ b/portfolio.html
@@ -30,20 +30,20 @@
       <div class="row">
       <div class="col-xs-1"></div>
       <div class="col-xs-5">
+      
       <div class="work">
-        <img src="assets/images/bbt.jpg" alt="Bubble Tea" width="200" height="200" class="img-fluid" alt="Responsive image">
-        <h3>Bubble Tea</h3>
+        <a href="https://jnieves14.github.io/Word-Guess-Game/" target="_blank"><img src="assets/images/guess.jpg"" alt="Word Guess Game" width="200" height="200" class="img-fluid" alt="Responsive image">
+        <h3>Word Guess Game</h3>
       </div>
 
       <div class="work">
-        <img src="assets/images/ramen.jpg" alt="Ramen" width="200" height="200" class="img-fluid" alt="Responsive image">
-        <h3>Ramen</h3>
+        <a href="https://jnieves14.github.io/Psychic-Game/" target="_blank"><img src="assets/images/psychic.jpg" alt="Psychic Game" width="200" height="200" class="img-fluid" alt="Responsive image"></a>
+        <h3>Psychic Game</h3>
       </div>
 
-
       <div class="work">
-        <img src="assets/images/xlb.jpg"" alt="Xiao Long Bao" width="200" height="200" class="img-fluid" alt="Responsive image">
-        <h3>Xiao Long Bao</h3>
+        <a href="https://jnieves14.github.io/Unit-4-game/" target="_blank"><img src="assets/images/crystals.png" alt="Crystals Collector" width="200" height="200" class="img-fluid" alt="Responsive image"></a>
+        <h3>Crystals Collector Game</h3>
       </div>
       </div>
 
